--- a/index.html
+++ b/index.html
@@ -104,40 +104,36 @@
   </section>
 
 <section id="career">
-  <h2>CAREER PATHS</h3>
+  <h2>CAREER OPTIONS</h3>
   <p style="text-align: center;">Computer Science encompasses a wide range of career paths you can choose from!</center></p>
-  <div class="spe-grid fade-in">
-    <div class="learn">
-      <i class="fa-solid fa-database"></i>
-      <h4>Data Science</h4>
-      <p>Analyze and interpret complex data to guide decision-making.</p>
+  <div class="path-grid fade-in">
+    <div class="path">
+      <i class="fa-solid fa-laptop-code"></i>
+      <h4>Software Developer</h4>
+      <p>Design and build software applications that solve real-world problems.</p>
     </div>
-    <div class="learn">
-      <i class="fa-solid fa-shield-halved"></i>
-      <h4>Cybersecurity</h4>
-      <p>Safeguard digital assets, networks, and sensitive information.</p>
+    <div class="path">
+      <i class="fa-solid fa-screwdriver-wrench"></i>
+      <h4>Information Technology (IT) Technician</h4>
+      <p>Maintain and troubleshoot computer systems and networks for organizations.</p>
     </div>
-    <div class="learn">
-      <i class="fa-solid fa-robot"></i>
-      <h4>Artificial Intelligence (AI)</h4>
-      <p>Develop intelligent systems capable of reasoning and problem-solving.</p>
+    <div class="path">
+      <i class="fa-solid fa-globe"></i>
+      <h4>Web Developer</h4>
+      <p>Create and manage websites, ensuring functionality and user experience.</p>
     </div>
-    <div class="learn">
-      <i class="fa-solid fa-brain"></i>
-      <h4>Machine Learning</h4>
-      <p>Create algorithms that learn from data to improve performance automatically.</p>
+    <div class="path">
+      <i class="fa-solid fa-diagram-project"></i>
+      <h4>Information Systems Manager</h4>
+      <p>Oversee technology strategies and ensure IT systems align with business goals.</p>
     </div>
-    <div class="learn">
-      <i class="fa-solid fa-pencil-ruler"></i>
-      <h4>UX/UI Design</h4>
-      <p>Design digital products that are functional, accessible, and user-friendly.</p>
-    </div>
-    <div class="learn">
-      <i class="fa-solid fa-code"></i>
-      <h4>Design and Development</h4>
-      <p>Combine creativity and coding to build efficient software and applications.</p>
+    <div class="path">
+      <i class="fa-solid fa-network-wired"></i>
+      <h4>Network and Computer Support Specialist</h4>
+      <p>Provide technical support and manage network infrastructure for users.</p>
     </div>
   </div>
+</section>
 </section>
 
 
@@ -179,4 +175,5 @@
   </footer>
 
 </body>
+
 </html>
