--- a/index.html
+++ b/index.html
@@ -107,27 +107,27 @@
   <h2>CAREER OPTIONS</h3>
   <p style="text-align: center;">Computer Science encompasses a wide range of career paths you can choose from!</center></p>
   <div class="path-grid fade-in">
-    <div class="path">
+    <div class="learn">
       <i class="fa-solid fa-laptop-code"></i>
       <h4>Software Developer</h4>
       <p>Design and build software applications that solve real-world problems.</p>
     </div>
-    <div class="path">
+    <div class="learn">
       <i class="fa-solid fa-screwdriver-wrench"></i>
       <h4>Information Technology (IT) Technician</h4>
       <p>Maintain and troubleshoot computer systems and networks for organizations.</p>
     </div>
-    <div class="path">
+    <div class="learn">
       <i class="fa-solid fa-globe"></i>
       <h4>Web Developer</h4>
       <p>Create and manage websites, ensuring functionality and user experience.</p>
     </div>
-    <div class="path">
+    <div class="learn">
       <i class="fa-solid fa-diagram-project"></i>
       <h4>Information Systems Manager</h4>
       <p>Oversee technology strategies and ensure IT systems align with business goals.</p>
     </div>
-    <div class="path">
+    <div class="learn">
       <i class="fa-solid fa-network-wired"></i>
       <h4>Network and Computer Support Specialist</h4>
       <p>Provide technical support and manage network infrastructure for users.</p>
@@ -177,3 +177,4 @@
 </body>
 
 </html>
+
