--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <section id="career">
   <h2>CAREER OPTIONS</h3>
   <p style="text-align: center;">Computer Science encompasses a wide range of career paths you can choose from!</center></p>
-  <div class="path-grid fade-in">
+  <div class="grid-container fade-in">
     <div class="learn">
       <i class="fa-solid fa-laptop-code"></i>
       <h4>Software Developer</h4>
@@ -177,4 +177,5 @@
 </body>
 
 </html>
+
 
