--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="learn">
       <i class="fa-solid fa-network-wired"></i>
       <h4>Network and Computer Support Specialist</h4>
-      <p>Provide technical support and manage network infrastructure for users.</p>
+      <p style = "text-align: center;">Provide technical support and manage network infrastructure for users.</p>
     </div>
   </div>
 </section>
@@ -177,5 +177,6 @@
 </body>
 
 </html>
+
 
 
